Bug 1472169 - Notify of appends from CloneAndAdopt clone path. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D180314